[package]
name = "strustegy"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Anthony Gardner"]
description = "Static, type-directed strategy composition for Rust"
license = "MIT"
repository = "https://github.com/Gardlok/Strustegy"
readme = "README.md"
keywords = ["strategy", "validation", "hlist", "typestate", "functional"]
categories = ["rust-patterns", "data-structures"]

[dependencies]

[package.metadata.docs.rs]
all-features = true
