[package]
name = "strustegy"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Anthony Gardner"]
description = "Static, type-directed strategy composition for Rust"
license = "MIT"
repository = "https://github.com/Gardlok/Strustegy"
readme = "README.md"
keywords = ["strategy", "validation", "hlist", "typestate", "functional"]
categories = ["rust-patterns", "data-structures"]

[dependencies]

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "project_slug"
path = "examples/project_slug/main.rs"

[[example]]
name = "request_line"
path = "examples/request_line/main.rs"

[[example]]
name = "nested_manifest"
path = "examples/nested_manifest/main.rs"

[[bench]]
name = "baseline"
harness = false

[[bench]]
name = "compile_depth_4"
path = "benches/compile_depth/depth_4.rs"
harness = false

[[bench]]
name = "compile_depth_8"
path = "benches/compile_depth/depth_8.rs"
harness = false

[[bench]]
name = "compile_depth_16"
path = "benches/compile_depth/depth_16.rs"
harness = false

[[bench]]
name = "compile_depth_32"
path = "benches/compile_depth/depth_32.rs"
harness = false
